...

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress|textPersonName"
                android:id="@+id/email_field" android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryText"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginPasswordTextInputLayout"
            android:layout_marginLeft="8dp" app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/SinginButton">


        <EditText
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/password"
                android:id="@+id/password_field" android:inputType="textPassword"
                android:textColor="@color/colorPrimaryText"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/login"
            android:background="@color/colorPrimary"
...
