...
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="333dp"
            android:layout_height="38dp"
            android:max="3"
            android:progress="3"
            android:id="@+id/seekbar"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="0.514"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintVertical_bias="0.501"/>
...
